--- a/scss/components/_grid.scss
+++ b/scss/components/_grid.scss
@@ -1,13 +1,13 @@
 @media only screen and (min-width: 420px) {
-  .grid {
+  .row {
     max-width: 760px;
     display: flex;
     flex-wrap: wrap;
     margin: 0 auto;
-  }
 
-  .grid > * {
-    flex: 1 0 5em;
-    margin: 0.5em;
+    & > * {
+      flex: 1 0 5em;
+      margin: 0.5em;
+    }
   }
 }
