--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,7 @@
 @import 'components/grid';
 @import 'components/typography';
 @import 'components/projects';
-@import 'components/hero';
 @import 'components/utility';
+@import 'components/banner';
+@import 'components/reset';
+@import 'components/posts-list';
