--- a/src/_includes/navigation.html
+++ b/src/_includes/navigation.html
@@ -8,7 +8,7 @@
   <nav class="p-navigation__nav" aria-label="Categories navigation">
     <ul class="p-navigation__items">
       <li class="p-navigation__item is-selected">
-        <a class="p-navigation__link" href="#">All</a>
+        <a class="p-navigation__link" href="/">All</a>
       </li>
       <li class="p-navigation__item">
         <a class="p-navigation__link" href="#">Development</a>
