--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -1,14 +1,12 @@
 .layout {
   display: grid;
   grid-template-areas:
-    'sidenav  navbar  main'
-    'sidenav  navbar  main'
-    'sidenav  navbar  main';
+    'navbar  main'
+    'navbar  main'
+    'navbar  main';
   grid-template-columns: 270px 1fr;
   grid-template-rows: 1fr min-content;
   height: 100vh;
-  overflow: hidden; // make sure panels transformed off-screen don't make the layout scroll
-  width: 100vw;
 }
 
 .l-navbar {
@@ -18,6 +16,7 @@
 
 .l-main {
   grid-area: main;
-  overflow-y: auto;
   padding: 2rem;
+  max-width: 72rem;
+  margin: 0 auto;
 }
