--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,9 @@
 .layout {
   display: grid;
-  grid-template-areas: "sidenav  navbar  main" "sidenav  navbar  main" "sidenav  navbar  main";
+  grid-template-areas: "navbar  main" "navbar  main" "navbar  main";
   grid-template-columns: 270px 1fr;
   grid-template-rows: 1fr min-content;
   height: 100vh;
-  overflow: hidden;
-  width: 100vw;
 }
 
 .l-navbar {
@@ -15,15 +13,15 @@
 
 .l-main {
   grid-area: main;
-  overflow-y: auto;
   padding: 2rem;
+  max-width: 72rem;
+  margin: 0 auto;
 }
 
 .p-navigation {
   background-color: #F1F1F1;
   border-right: 1px solid #efefef;
   padding: 1rem 0;
-  overflow: hidden;
 }
 .p-navigation .p-navigation__nav {
   display: flex;
@@ -31,10 +29,9 @@
   justify-content: space-between;
   align-items: flex-start;
   height: calc(100% - 80px);
-  width: 100%;
 }
 .p-navigation .p-navigation__image {
-  width: 85%;
+  width: 90%;
 }
 .p-navigation .p-navigation__items {
   padding-left: 0;
@@ -56,7 +53,7 @@
   text-decoration: none;
   display: block;
   padding: 0.5rem 1rem;
-  width: 100%;
+  width: calc(100% - 2rem);
 }
 .p-navigation .p-navigation__link:hover {
   background-color: rgba(0, 0, 0, 0.05);
