--- a/src/_layouts/article.html
+++ b/src/_layouts/article.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{ title }}</title>
     <link rel="stylesheet" href="{{ '/css/style.css' | url }}" />
+    <link rel="shortcut icon" href="https://anthonydillon.com/favicon.png">
   </head>
   <body>
     <div class="layout">
       {% include navigation.html %}
-      <main class="l-main">
+      <main class="l-main p-article">
         <h1>{{title}}</h1>
         <article>{{ content | safe }}</article>
       </main>
