--- a/src/sass/_navigation.scss
+++ b/src/sass/_navigation.scss
@@ -2,6 +2,8 @@
   background-color: #F1F1F1;
   border-right: 1px solid #efefef;
   padding: 1rem 0;
+  position: fixed;
+  height: calc(100vh - 2rem);
 
   .p-navigation__nav {
     display: flex;
