Fix homepage and some mobile nav

--- a/src/_layouts/base.html
+++ b/src/_layouts/base.html
@@ -11,7 +11,7 @@
 <body>
   <div class="layout">
     {% include navigation.html %}
-    <main>{{ content | safe }}</main>
+    <main class="l-main">{{ content | safe }}</main>
   </div>
 </body>
 </html>
