--- a/src/_includes/navigation.html
+++ b/src/_includes/navigation.html
@@ -1,4 +1,10 @@
-<header id="navigation" class="p-navigation l-sidenav">
+<header id="navigation" class="p-navigation l-navbar">
+  <div class="p-navigation__toggle">
+    <button class="p-navigation__toggle-button" type="button" aria-label="Toggle navigation">
+      Toogle side navigation
+    </button>
+  </div>
+
   <div class="p-navigation__logo">
     <a class="p-navigation__item" href="#">
       <img class="p-navigation__image" src="https://anthonydillon.com/images/ad_logo.jpg" alt="" width="95">
@@ -37,3 +43,12 @@
     </ul>
   </nav>
 </header>
+
+<script>
+  var toggle = document.querySelector('.p-navigation__toggle');
+  var layout = document.querySelector('.layout');
+
+  toggle.addEventListener('click', function() {
+    layout.classList.toggle('is-open');
+  });
+</script>
