--- a/src/css/style.css
+++ b/src/css/style.css
@@ -39,6 +39,11 @@
   padding: 1rem 0;
   height: calc(100vh - 2rem);
 }
+@media screen and (min-width: 1200px) {
+  .p-navigation {
+    position: fixed;
+  }
+}
 .p-navigation .p-navigation__nav {
   display: flex;
   flex-direction: column;
