Highlight the active navigaton item

--- a/src/_layouts/article.html
+++ b/src/_layouts/article.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="layout">
-      {% include navigation.html %}
+      {% include navigation.njk %}
       <main class="l-main p-article">
         <h1>{{title}}</h1>
         <article>{{ content | safe }}</article>
