--- a/src/_layouts/base.html
+++ b/src/_layouts/base.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="layout">
-    {% include navigation.html %}
+    {% include navigation.njk %}
     <main class="l-main">{{ content | safe }}</main>
   </div>
 </body>
