--- a/src/_includes/navigation.njk
+++ b/src/_includes/navigation.njk
@@ -14,25 +14,25 @@
   <nav class="p-navigation__nav" aria-label="Categories navigation">
     <ul class="p-navigation__items">
       <li class="p-navigation__item" {% if page.url == "/engineering/" %}aria-current="page"{% endif %}>
-        <a class="p-navigation__link" href="/engineering">Engineering</a>
+        <a class="p-navigation__link" href="{{ '/engineering/' | url }}">Engineering</a>
       </li>
       <li class="p-navigation__item" {% if page.url == "/management/" %}aria-current="page"{% endif %}>
-        <a class="p-navigation__link" href="/management">Management</a>
+        <a class="p-navigation__link" href="{{ '/management/' | url }}">Management</a>
       </li>
       <li class="p-navigation__item" {% if page.url == "/cooking/" %}aria-current="page"{% endif %}>
-        <a class="p-navigation__link" href="/cooking">Cooking</a>
+        <a class="p-navigation__link" href="{{ '/cooking/' | url }}">Cooking</a>
       </li>
       <li class="p-navigation__item" {% if page.url == "/ideas/" %}aria-current="page"{% endif %}>
-        <a class="p-navigation__link" href="/ideas">Ideas</a>
+        <a class="p-navigation__link" href="{{ '/ideas/' | url }}">Ideas</a>
       </li>
     </ul>
 
     <ul class="p-navigation__items">
       <li class="p-navigation__item" {% if page.url == "/my-work/" %}aria-current="page"{% endif %}>
-        <a class="p-navigation__link" href="/my-work">My work</a>
+        <a class="p-navigation__link" href="{{ '/my-work/' | url }}">My work</a>
       </li>
       <li class="p-navigation__item" {% if page.url == "/about/" %}aria-current="page"{% endif %}>
-        <a class="p-navigation__link" href="/about">About</a>
+        <a class="p-navigation__link" href="{{ '/about/' | url }}">About</a>
       </li>
       <li class="p-navigation__item">
         <a class="p-navigation__link" href="https://twitter.com/anthonydillon">@anthonydillon on Twitter</a>
