--- a/src/_includes/navigation.njk
+++ b/src/_includes/navigation.njk
@@ -6,7 +6,7 @@
   </div>
 
   <div class="p-navigation__logo">
-    <a class="p-navigation__item" href="/">
+    <a class="p-navigation__item" href="{{ '/' | url }}">
       <img class="p-navigation__image" src="https://anthonydillon.com/images/ad_logo.jpg" alt="" width="95">
     </a>
   </div>
