--- a/src/_includes/navigation.njk
+++ b/src/_includes/navigation.njk
@@ -6,8 +6,8 @@
   </div>
 
   <div class="p-navigation__logo">
-    <a class="p-navigation__item" href="/">
-      <img class="p-navigation__image" src="/img/logo.jpg" alt="" width="95" aria-label="Go to homepage" />
+    <a class="p-navigation__item" href="/" aria-label="Go to homepage">
+      <img class="p-navigation__image" src="/img/logo.jpg" alt="" width="95" />
     </a>
   </div>
 
