--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,11 @@
   max-width: 50rem;
   margin: 0 auto;
 }
+@media screen and (max-width: 1200px) {
+  .l-main {
+    max-width: calc(100vw - 4rem);
+  }
+}
 
 .p-navigation {
   background-color: #F1F1F1;
@@ -108,6 +113,27 @@
 }
 .p-article li {
   margin-bottom: 0.5rem;
+}
+.p-article pre {
+  background-color: rgba(0, 0, 0, 0.03);
+  color: #111;
+  display: block;
+  margin-bottom: 1.5rem;
+  margin-top: 0;
+  overflow: auto;
+  padding: 0.5rem 1rem;
+  text-align: left;
+  text-shadow: none;
+  white-space: pre;
+}
+.p-article pre code {
+  background: none;
+  box-shadow: none;
+  display: inline-block;
+  line-height: 1.5rem;
+  margin-left: 0;
+  margin-right: 0;
+  padding: 0;
 }
 
 body {
