--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -6,6 +6,7 @@ $navigation-threshold: 1000px;
 @import "typography";
 @import "breadcrumbs";
 @import "cards";
+@import "badge";
 
 body {
   display: block;
